Fix to ios Flickering

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 #navi {
-    opacity: 0;
+    display: none;
     -webkit-backface-visibility: hidden;
 }
 
